--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/layout-grid": "^0.41.0",
     "@material/react-button": "^0.11.0",
     "@types/classnames": "^2.2.7",
     "@types/node": "^11.13.0",
