--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-utils": "^1.4.1",
     "lodash": "^4.17.13",
     "lodash.template": "^4.5.0",
     "react": "^16.8.6",
