--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "hook",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jrperezjr.github.io/bmw-tech-checklist",
   "dependencies": {
     "eslint-utils": "^1.4.1",
+    "immer": "^8.0.1",
+    "ini": "^1.3.6",
     "lodash": "^4.17.19",
     "lodash.template": "^4.5.0",
+    "node-forge": "^0.10.0",
+    "node-notifier": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-popupbox": "^2.0.8",
+    "react-scripts": "^4.0.1",
+    "serialize-javascript": "^3.1.0",
+    "yargs-parser": "^13.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
