--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://jrperezjr.github.io/bmw-tech-checklist",
   "dependencies": {
     "eslint-utils": "^1.4.1",
+    "gh-pages": "^3.1.0",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
     "lodash": "^4.17.19",
